* Added VSCODE launcher to run different tests * Added SERVER VERSION directly to PG CLIENT object * Refactored CONFIG and OPTIONS * Added comments to SQL SCRIPT GENERATOR functions * Added support to JSONB * Added api CATALOG to collect objects definitions * Added api COMPARE to find differences in objects definitions (not records yet!)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,16 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}\\test\\test.js",            
+            "name": "Launch Migrate Test",
+            "program": "${workspaceFolder}\\test\\migrateTest.js",
+            "protocol": "auto",
+            "console": "integratedTerminal"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Compare Test",
+            "program": "${workspaceFolder}\\test\\compareTest.js",
             "protocol": "auto",
             "console": "integratedTerminal"
         }
