--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "deep-equal": "^2.0.1",
-    "line-by-line": "^0.1.6",
-    "pg": "^7.12.0"
+    "deep-equal": "2.0.1",
+    "line-by-line": "0.1.6",
+    "pg": "8.1.0"
   }
 }
