* Added contributors in package.json * Added support for PG EXTENSION * Fixed issue #9 comparing data values with NULL * Fixed issues #5 #6 while finding dependencies between objects

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"angulion",
 		"0xradical",
 		"AlekseiDanilov",
-		"JonathonCwik"
+		"JonathonCwik",
+		"olivierdalang"
 	],
 	"license": "MIT",
 	"bugs": {
